--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>การรับบุตร</ion-title>
+    <ion-title text-center>การรับบุตร</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -23,6 +23,5 @@
     </ion-item>
     </ion-card-header>
   </ion-card>
-  Lat:{{latitude}} <br> Lng:{{longitude}}
 
 </ion-content>
